--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "vue": "^3.2.37"
+  },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^3.1.0",
+    "vite": "^3.1.0",
     "typescript": "^4.8.3"
   }
 }
