--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite packages/web",
+    "build": "vite build packages/web",
+    "preview": "vite preview packages/web"
   },
   "keywords": [],
   "author": "",
