--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,17 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@monorepo-pnpm-demo/http": "workspace:^1.0.0",
-    "vue": "^3.2.37"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "vite": "^3.1.0"
+    "@monorepo-pnpm-demo/http": "workspace:^1.0.0"
   }
 }
